...
    <string name="about_vola">About VOLA!</string>
    <string name="view">View</string>
    <string name="other">Other</string>
    <string name="google_maps_key">AIzaSyCBJHrbZRCngtHJ15UTBKJZ3wDFwHsVzC0</string>
    <string name="nav_events">Events</string>
    <string name="nav_starred_events">Starred Events</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_navigate">Navigate</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_share">Share App</string>
    <string name="verifying">Verifying Account...</string>
    <string name="invalid_password">Password should atleast be 6 characters long</string>
    <string name="invalid_username">Please enter a valid Email</string>
...
